--- a/sass/style.scss
+++ b/sass/style.scss
@@ -665,19 +665,16 @@ a {
 
 /* Specific CSS code for the magnifying glass icon */
 a.zoomable {
-  display:block;
-  /* Adjust the width and height properties
-  according to your zoomable thumbnails dimensions;*/
-  width:320px;
-  height:180px;
-  background:#000;
-  position:relative;
-  -webkit-box-shadow:rgba(0,0,0,0.4) 0 4px 10px;
-  -moz-box-shadow:rgba(0,0,0,0.4) 0 4px 10px;
-  box-shadow:rgba(0,0,0,0.4) 0 4px 10px;
+  display: block;
+	width: 300px;
+	height: 300px;
+	-moz-box-shadow: rgba(0,0,0,0.4) 0 4px 10px;
+	border: 1px solid #fff;
+	border-radius: 300px;
+	position: relative;
 }
 
-a.zoomable span.zoom_icon {
+a.zoomable span.playbtn {
   display:block;
   width:100%;
   height:100%;
@@ -689,8 +686,8 @@ a.zoomable span.zoom_icon {
   Upload the icon below to your server and update the path accordingly.
   Please do not hotlink it!
   */
-  background:url("http://f.cl.ly/items/3C1V2w2r36360V3c1b3x/sv_zoom_icon.png") no-repeat bottom right;
-  opacity:0.3;
+  background:url("../images/play_btn.png") no-repeat center center;
+  opacity:0.9;
   -o-transition:opacity 0.25s;
   -moz-transition:opacity 0.25s;
   -webkit-transition:opacity 0.25s;
