--- a/sass/style.scss
+++ b/sass/style.scss
@@ -694,8 +694,8 @@ a.zoomable span.playbtn {
   transition:opacity 0.25s;
 }
 
-a #playbtn_img {
-	z-index: -1;
+a img {
+	z-index: -10;
 }
 
 a.zoomable:hover span.zoom_icon {opacity:1}
