--- a/sass/style.scss
+++ b/sass/style.scss
@@ -643,10 +643,10 @@ footer {
 	-webkit-border-radius: 100px;
 	-moz-border-radius: 100px;
 	border-radius: 100px;
-	-webkit-transition: all 0.4s;
+	/*-webkit-transition: all 0.4s;
 	-moz-transition: all 0.4s;
 	-o-transition: all 0.4s;
-	transition: all 0.4s;
+	transition: all 0.4s;*/
 	span {
 		background-image: url(../images/play_btn.png);
 	}
