--- a/style/ie8.css
+++ b/style/ie8.css
@@ -14,38 +14,36 @@
 #fbsection1 {
 	background-color: #A2A6A9;
 	background-image: url(../images/phase1-12.png);
-	position: absolute; 
-  top: 0; 
-  left: 0; 
-  right: 0; 
-  bottom: 0; 
-  margin: auto; 
+	margin: 0 auto;
+	position: relative;
 }
 
 #fbsection2 {
 	background-color: #A2A6A9;
 	background-image: url(../images/phase2-13.png);
-	position: absolute; 
-  top: 0; 
-  left: 0; 
-  right: 0; 
-  bottom: 0; 
-  margin: auto; 
+	margin: 0 auto;
+	position: relative;
 }
 
 #fbsection3 {
 	background-color: #A2A6A9;
 	background-image: url(../images/phase3-12.png);
+	margin: 0 auto;
+	position: relative;
 }
 
 #fbsection4 {
 	background-color: #A2A6A9;
 	background-image: url(../images/phase5-12.png);
+	margin: 0 auto;
+	position: relative;
 }
 
 #fbsection5 {
 	background-color: #A2A6A9;
 	background-image: url(../images/phase6-13.png);
+	margin: 0 auto;
+	position: relative;
 }
 
 #fbsection5 ul a {
