testing ie8 css

--- a/style/ie8.css
+++ b/style/ie8.css
@@ -10,7 +10,6 @@
 	background-color: #A2A6A9;
 }
 
-
 #fbsection1 {
 	background-color: #A2A6A9;
 	background-image: url(../images/phase1-12.png);
@@ -47,5 +46,5 @@
 }
 
 #fbsection5 ul a {
-	border: 3px solid #fdd9;
+	border: 2px solid #f009;
 }
