--- a/sass/style.scss
+++ b/sass/style.scss
@@ -449,7 +449,8 @@ body {
 	top: 425px;
 	z-index: 10000000;
 	a {
-		border: 1px solid red;
+		border: 1px solid yellow;
+		border: 2px solid #fff9;
 		border-radius: 150px;
 		color: #fff;
 		display: block;
