--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,15 @@ html, body,
 	height: 100%; 
 }
 
+/* 
+ * basic setting for ie8 start
+ */
+.onlyie {
+	display: none !important;
+}
+
+/* end */
+
 @mixin horizontal-center() {
   display: -webkit-box;
   display: -moz-box;
