--- a/style/ie8.css
+++ b/style/ie8.css
@@ -11,11 +11,10 @@
 }
 
 #fbsection1 {
-	background-color: #A2A6A9;
-	background-image: url(../images/phase6-1.png);
-	background-size: 100% auto;
+	border: 5px solid #fff9;
 	margin: 0 auto;
 	position: relative;
+	height: 100%;
 }
 
 #fbsection2 {
@@ -24,6 +23,7 @@
 	background-size: 100% auto;
 	margin: 0 auto;
 	position: relative;
+	width: 100%;
 }
 
 #fbsection3 {
@@ -32,6 +32,7 @@
 	background-size: 100% auto;
 	margin: 0 auto;
 	position: relative;
+	width: 100%;
 }
 
 #fbsection4 {
@@ -40,6 +41,7 @@
 	background-size: 100% auto;
 	margin: 0 auto;
 	position: relative;
+	width: 100%;
 }
 
 #fbsection5 {
@@ -48,6 +50,7 @@
 	background-size: 100% auto;
 	margin: 0 auto;
 	position: relative;
+	width: 100%;
 }
 
 #fbsection5 ul a {
