--- a/sass/style.scss
+++ b/sass/style.scss
@@ -141,6 +141,7 @@ body {
 	margin: 0 auto;
 	section {
 		/*background: url(../images/background.jpg);*/
+		border: 1px solid red;
 		background-color: #A2A6A9;
 	}
 }
