--- a/sass/style.scss
+++ b/sass/style.scss
@@ -661,15 +661,18 @@ a.zoomable:hover span.zoom_icon {
 
 .lt-ie8 {
 	body {
-		background: #465654;
+		background: #000;
 	}
 }
 
 .lt-ie9 {
-	body {
-		background: #fdd;
-	}
 	.container section {
 		border: 1px solid blue;
+	}
+	#fbsection1 {
+		background-color: #fdd;
+		background-image: url(../images/phase1-12.png);
+		width: 997px;
+		margin: 0 auto;
 	}
 }
