--- a/sass/style.scss
+++ b/sass/style.scss
@@ -672,7 +672,7 @@ a.zoomable:hover span.zoom_icon {
 	#fbsection1 {
 		background-color: #fdd;
 		background-image: url(../images/phase1-12.png);
-		width: 997px;
+		background-size: 997px 628px;
 		margin: 0 auto;
 	}
 }
