--- a/sass/style.scss
+++ b/sass/style.scss
@@ -141,7 +141,6 @@ body {
 	margin: 0 auto;
 	section {
 		/*background: url(../images/background.jpg);*/
-		border: 1px solid red;
 		background-color: #A2A6A9;
 	}
 }
@@ -667,7 +666,7 @@ a.zoomable:hover span.zoom_icon {
 
 .lt-ie9 {
 	.container section {
-		border: 1px solid blue;
+		border: 1px solid yellow;
 	}
 	#fbsection1 {
 		background-color: #fdd;
