--- a/sass/style.scss
+++ b/sass/style.scss
@@ -670,7 +670,7 @@ a.zoomable:hover span.zoom_icon {
 	}
 	#fbsection1 {
 		background-color: #fdd;
-		background-image: url(../images/phase1-1.png);
+		background-image: url(../images/ie-phase1-1.png);
 		background-size: 997px 628px;
 		margin: 0 auto;
 	}
