update css for ie

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -666,7 +666,7 @@ a.zoomable:hover span.zoom_icon {
 
 .lt-ie9 {
 	.container section {
-		border: 1px solid yellow;
+		border: 1px solid red;
 	}
 	#fbsection1 {
 		background-color: #fdd;
