--- a/sass/style.scss
+++ b/sass/style.scss
@@ -666,7 +666,7 @@ a.zoomable:hover span.zoom_icon {
 
 .lt-ie9 {
 	.container section {
-		border: 1px solid red;
+		border: 1px solid blue;
 	}
 	#fbsection1 {
 		background-image: url(../images/ie-phase1-12.png);
