--- a/sass/style.scss
+++ b/sass/style.scss
@@ -672,7 +672,7 @@ a.zoomable:hover span.zoom_icon {
 		width: 997px;
 		margin: 0 auto;
 		section {
-			border: 1px solid blue;
+			border: 1px solid yellow;
 		}
 	}
 	#fbsection1 {
