--- a/sass/style.scss
+++ b/sass/style.scss
@@ -668,7 +668,7 @@ a.zoomable:hover span.zoom_icon {
 	.container {
 		background-size: 100% auto;
 		background-repeat: repeat;
-		height: 100%;
+		height: 4623px;
 		width: 997px;
 		margin: 0 auto;
 		section {
