--- a/sass/style.scss
+++ b/sass/style.scss
@@ -677,22 +677,27 @@ a.zoomable:hover span.zoom_icon {
 	}
 	#fbsection1 {
 		background-image: url(../images/ie-phase1-12.png);
+		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection2 {
 		background-image: url(../images/ie-phase2-12.png);
+		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection3 {
 		background-image: url(../images/ie-phase3-12.png);
+		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection4 {
 		background-image: url(../images/ie-phase5-12.png);
+		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection4 {
 		background-image: url(../images/ie-phase6-12.png);
+		height: 1231px;
 		margin: 0 auto;
 	}
 }
