--- a/sass/style.scss
+++ b/sass/style.scss
@@ -668,12 +668,9 @@ a.zoomable:hover span.zoom_icon {
 	.container {
 		background-size: 100% auto;
 		background-repeat: repeat;
-		height: 4623px;
+		height: 4545;
 		width: 997px;
 		margin: 0 auto;
-		section {
-			border: 1px solid yellow;
-		}
 	}
 	#fbsection1 {
 		background-image: url(../images/ie-phase1-12.png);
@@ -697,7 +694,7 @@ a.zoomable:hover span.zoom_icon {
 	}
 	#fbsection5 {
 		background-image: url(../images/ie-phase6-12.png);
-		height: 1231px;
+		height: 1153px;
 		margin: 0 auto;
 	}
 	#fbsection6 {
