--- a/sass/style.scss
+++ b/sass/style.scss
@@ -699,10 +699,10 @@ a.zoomable:hover span.zoom_icon {
 	#fbsection6 {
 		display: none !important;
 	}
-	
+
 	#fbsection1 .content-layer p,
 	#fbsection2 .content-layer p,
-	#fbsection3 .content-layer p,
+	#fbsection3 .content-layer p#parag1,
 	#fbsection4 .content-layer p,
 	#fbsection5 .content-layer p {
 			padding-top: 10px;
