--- a/sass/style.scss
+++ b/sass/style.scss
@@ -810,58 +810,58 @@ a.zoomable:hover span.zoom_icon {
   			top: 230px;
   		}
   	}
-  	a:nth-child(1) {
+  	a#tab1 {
   		left: 50px;
   		li {
   			display: block !important;
   		}
   	}
-  	a:nth-child(2) {
+  	a#tab2 {
   		left: 130px;
   	}
-  	a:nth-child(3) {
+  	a#tab3 {
   		left: 210px;
   		li {
   			margin-left: -160px;
   		}
   	}
-  	a:nth-child(4) {
+  	a#tab4 {
   		left: 290px;
   		li {
   			margin-left: -240px;
   		}
   	}
-  	a:nth-child(5) {
+  	a#tab5 {
   		left: 370px;
   		li {
   			margin-left: -385px;
   		}
   	}
-  	a:nth-child(6) {
+  	a#tab6 {
   		left: 450px;
   		li {
   			margin-left: -400px;
   		}
   	}
-  	a:nth-child(7) {
+  	a#tab7 {
   		left: 530px;
   		li {
   			margin-left: -706px;
   		}
   	}
-  	a:nth-child(8) {
+  	a#tab8 {
   		left: 610px;
   		li {
   			margin-left: -560px;
   		}
   	}
-  	a:nth-child(9) {
+  	a#tab9 {
   		left: 690px;
   		li {
   			margin-left: -1025px;
   		}
   	}
-  	a:nth-child(10) {
+  	a#tab10 {
   		left: 770px;
   		li {
   			margin-left: -720px;
