--- a/sass/style.scss
+++ b/sass/style.scss
@@ -812,57 +812,67 @@ a.zoomable:hover span.zoom_icon {
   	}
   	a#tab1 {
   		left: 50px;
+  		top: 0px;
   		li {
   			display: block !important;
   		}
   	}
   	a#tab2 {
   		left: 130px;
+  		top: 80px;
   	}
   	a#tab3 {
   		left: 210px;
+  		top: 0px;
   		li {
   			margin-left: -160px;
   		}
   	}
   	a#tab4 {
   		left: 290px;
+  		top: 80px;
   		li {
   			margin-left: -240px;
   		}
   	}
   	a#tab5 {
   		left: 370px;
+  		top: 0px;
   		li {
   			margin-left: -385px;
   		}
   	}
   	a#tab6 {
   		left: 450px;
+  		top: 80px;
   		li {
   			margin-left: -400px;
   		}
   	}
   	a#tab7 {
   		left: 530px;
+  		top: 0px;
   		li {
   			margin-left: -706px;
   		}
   	}
   	a#tab8 {
   		left: 610px;
+  		top: 80px;
   		li {
   			margin-left: -560px;
   		}
   	}
   	a#tab9 {
   		left: 690px;
+  		top: 0px;
   		li {
   			margin-left: -1025px;
   		}
   	}
   	a#tab10 {
   		left: 770px;
+  		top: 80px;
   		li {
   			margin-left: -720px;
   		}
