--- a/sass/style.scss
+++ b/sass/style.scss
@@ -471,13 +471,13 @@ body {
 			position: absolute;
 	  }
 	  li {
-		  /*display: none;*/
+		  display: none;
 		  border: 1px solid #fdd;
 		  display: block;
 		  position: absolute;
-		  left: 10px;
+		  left: 320px;
 			right: 0;
-			top: 0;
+			top: 150px;
 	  }
   }
 	a:hover img.buttons {
@@ -780,6 +780,10 @@ a.zoomable:hover span.zoom_icon {
 		  li {
 					/*display: none;*/
 				border: 1px solid red;
+		  	display: block;
+		  	position: absolute;
+		  	left: 320px;
+				top: 150px;
 		  }
 	  }
 		a:hover img.buttons {
