--- a/sass/style.scss
+++ b/sass/style.scss
@@ -849,14 +849,16 @@ a.zoomable:hover span.zoom_icon {
   		left: 290px;
   		top: -280px;
   		li {
-  			display: block !important;
   			margin-left: -240px;
+  			top: 145px;
+  			left: 330px;
   		}
   	}
   	a#tab5 {
   		left: 370px;
   		top: -480px;
   		li {
+  			display: block !important;
   			margin-left: -385px;
   		}
   	}
