--- a/sass/style.scss
+++ b/sass/style.scss
@@ -875,16 +875,17 @@ a.zoomable:hover span.zoom_icon {
   	a#tab7 {
   		left: 530px;
   		top: -720px;
-  		li {
-  			
-  			display: block !important;
+  		li {  			
   			margin-left: -706px;
+  			top: 140px;
+  			left: 330px;
   		}
   	}
   	a#tab8 {
   		left: 610px;
   		top: -760px;
   		li {
+  			display: block !important;
   			margin-left: -560px;
   		}
   	}
