--- a/sass/style.scss
+++ b/sass/style.scss
@@ -885,14 +885,16 @@ a.zoomable:hover span.zoom_icon {
   		left: 610px;
   		top: -760px;
   		li {
-  			display: block !important;
   			margin-left: -560px;
+  			top: 218px;
+  			left: 555px;
   		}
   	}
   	a#tab9 {
   		left: 690px;
   		top: -960px;
   		li {
+  			display: block !important;
   			margin-left: -1025px;
   		}
   	}
