--- a/sass/style.scss
+++ b/sass/style.scss
@@ -853,6 +853,8 @@ a.zoomable:hover span.zoom_icon {
   		left: 370px;
   		top: -480px;
   		li {
+  			
+  			display: block !important;
   			margin-left: -385px;
   			top: 220px;
   			left: 395px;
