adjust navigatino size

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -898,9 +898,9 @@ a.zoomable:hover span.zoom_icon {
   		left: 770px;
   		top: -1000px;
   		li {
-
-  			display: block !important;	
   			margin-left: -720px;
+  			top: 150px;
+  			left: 330px;
   		}
   	}
   }
