adjust navigatino size

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -910,6 +910,7 @@ a.zoomable:hover span.zoom_icon {
 
 	/* video */
 	a.zoomable {
+		border: none;
 		border-radius: 300px;
 		display: block;
 		height: 140px;
