--- a/sass/style.scss
+++ b/sass/style.scss
@@ -105,23 +105,18 @@ body {
 .cbp-fbscroller > nav {
 	a:nth-child(1) span {
 		margin-left: -98px;
-
 	}
 	a:nth-child(2) span {
 		margin-left: -86px;
-
 	}
 	a:nth-child(3) span {
 		margin-left: -105px;
-
 	}
 	a:nth-child(4) span {
 		margin-left: -113px;
-
 	}
 	a:nth-child(5) span {
 		margin-left: -83px;
-
 	}
 }
 
@@ -665,6 +660,29 @@ a.zoomable:hover span.zoom_icon {
 .lt-ie8 {
 	body {
 		background: #000;
+	}
+}
+
+.lt-ie9 .cbp-fbscroller > nav {
+	a#nav1 span {
+		margin-left: -98px;
+		text-align: right;
+	}
+	a#nav2 span {
+		margin-left: -86px;
+		text-align: right;
+	}
+	a#nav3 span {
+		margin-left: -105px;
+		text-align: right;
+	}
+	a#nav4 span {
+		margin-left: -113px;
+		text-align: right;
+	}
+	a#nav5 span {
+		margin-left: -83px;
+		text-align: right;
 	}
 }
 
