--- a/sass/style.scss
+++ b/sass/style.scss
@@ -662,26 +662,29 @@ a.zoomable:hover span.zoom_icon {
 		background: #000;
 	}
 }
+.lt-ie9 .cbp-fbscroller > nav {
+	right: -930px;
+}
 
 .lt-ie9 .cbp-fbscroller > nav {
 	a#nav1 span {
-		margin-left: -98px;
+		margin-left: -93px;
 		text-align: right;
 	}
 	a#nav2 span {
-		margin-left: -86px;
+		margin-left: -81px;
 		text-align: right;
 	}
 	a#nav3 span {
-		margin-left: -105px;
+		margin-left: -100px;
 		text-align: right;
 	}
 	a#nav4 span {
-		margin-left: -113px;
+		margin-left: -108px;
 		text-align: right;
 	}
 	a#nav5 span {
-		margin-left: -83px;
+		margin-left: -78px;
 		text-align: right;
 	}
 }
