adjust navigatino size

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -664,6 +664,12 @@ a.zoomable:hover span.zoom_icon {
 }
 .lt-ie9 .cbp-fbscroller > nav {
 	right: -930px;
+	a span {
+		display: none;
+	}
+	a:hover span {
+		display: block !important;
+	}
 }
 
 .lt-ie9 .cbp-fbscroller > nav {
