update css for ie8

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -699,7 +699,7 @@ a.zoomable:hover span.zoom_icon {
 	.container {
 		background-size: 100% auto;
 		background-repeat: repeat;
-		height: 4155;
+		height: 4155px;
 		width: 997px;
 		margin: 0 auto;
 	}
@@ -931,7 +931,6 @@ a.zoomable:hover span.zoom_icon {
   		}
   	}
   }
-
 
 /*---------------------------------------------*/
 
