update css for ie8

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -819,6 +819,7 @@ a.zoomable:hover span.zoom_icon {
 	}
 	
 	#fbsection5 ul {
+		height: 100px;
   	a:nth-child(odd) {
   		li {
   			position: absolute;
