--- a/sass/style.scss
+++ b/sass/style.scss
@@ -778,7 +778,6 @@ a.zoomable:hover span.zoom_icon {
 		}
 	}
 
-	/*---------------------------------------------*/
 	#fbsection5 ul {
 		left: 25px;
 		list-style: none;
@@ -937,18 +936,25 @@ a.zoomable:hover span.zoom_icon {
   	}
   }
 
-/*---------------------------------------------*/
-
 	/* video */
 	a.zoomable {
-		border: none;
-		border-radius: 300px;
+/*		border: none;
 		display: block;
 		height: 140px;
 		margin-left: 245px;
 		margin-top: 300px;
 		padding: 80px;
 		position: relative;
-		width: 140px;
+		width: 140px;*/
+
+		display: block;
+		border: 1px solid #fdd;
+		padding: 60px 0;
+		text-align: center; width: 200px;
+		-webkit-border-radius: 100px;
+		-moz-border-radius: 100px;
+		border-radius: 100px;
+		background: #EEFF99;
+		behavior: url(../lib/PIE.htc);
 	}
 }
