--- a/sass/style.scss
+++ b/sass/style.scss
@@ -678,23 +678,23 @@ a.zoomable:hover span.zoom_icon {
 
 .lt-ie9 .cbp-fbscroller > nav {
 	a#nav1 span {
-		margin-left: -98px;
+		margin-left: -103px;
 		text-align: right;
 	}
 	a#nav2 span {
-		margin-left: -86px;
+		margin-left: -91px;
 		text-align: right;
 	}
 	a#nav3 span {
-		margin-left: -105px;
+		margin-left: -110px;
 		text-align: right;
 	}
 	a#nav4 span {
-		margin-left: -113px;
+		margin-left: -118px;
 		text-align: right;
 	}
 	a#nav5 span {
-		margin-left: -83px;
+		margin-left: -88px;
 		text-align: right;
 	}
 }
@@ -950,12 +950,12 @@ a.zoomable:hover span.zoom_icon {
 		display: block;
 		border: 3px solid #EEFF99;
 		height: 300px;
-		padding: 60px 0;
+		padding: 0;
 		text-align: center; 
 		width: 100%;
 		-webkit-border-radius: 100px;
 		-moz-border-radius: 100px;
-		border-radius: 3100px;
+		border-radius: 100px;
 		behavior: url(../lib/PIE.htc);
 	}
 }
