--- a/sass/style.scss
+++ b/sass/style.scss
@@ -950,11 +950,12 @@ a.zoomable:hover span.zoom_icon {
 
 		display: block;
 		border: 3px solid #EEFF99;
-		height: 300px;
+		height: 400px;
 		padding: 0;
 		position: relative;
 		text-align: center; 
 		width: 100%;
+		z-index: 10000;
 		-webkit-border-radius: 100px;
 		-moz-border-radius: 100px;
 		border-radius: 100px;
