--- a/sass/style.scss
+++ b/sass/style.scss
@@ -949,13 +949,13 @@ a.zoomable:hover span.zoom_icon {
 		width: 140px;*/
 
 		display: block;
-		border: 3px solid #EEFF99;
-		height: 400px;
+		border: 1px solid #EEFF99;
+		height: 360px;
 		padding: 0;
 		position: relative;
 		text-align: center; 
 		width: 100%;
-		z-index: 10000;
+		z-index: 10000 !important;
 		-webkit-border-radius: 100px;
 		-moz-border-radius: 100px;
 		border-radius: 100px;
