--- a/sass/style.scss
+++ b/sass/style.scss
@@ -448,7 +448,7 @@ body {
 	position: absolute;
 	right: 0;
 	top: 425px;
-	z-index: 10000000;
+	z-index: 99;
 	a {
 		border-radius: 150px;
 		color: #fff;
