--- a/sass/style.scss
+++ b/sass/style.scss
@@ -686,11 +686,11 @@ a.zoomable:hover span.zoom_icon {
 		border-radius: 3px;
 	}
  	a {
-		background-image: url(../images/unselected.png) no-repeat center center;
+		background-image: url('../images/unselected.png') no-repeat center center;
 	}
   a.cbp-fbcurrent,
   a:hover {
-		background-image: url(../images/selected.png) no-repeat center center;
+		background-image: url('../images/selected.png') no-repeat center center;
 	}
 	a#nav1 span {
 		margin-left: -103px;
