--- a/sass/style.scss
+++ b/sass/style.scss
@@ -679,7 +679,7 @@ a.zoomable:hover span.zoom_icon {
 
 .lt-ie9 .cbp-fbscroller > nav {
 	a {
-		background: none;
+		background: #fff;
 		border: 1px solid red;
 		-webkit-border-radius: 3px;
 		-moz-border-radius: 3px;
