--- a/sass/style.scss
+++ b/sass/style.scss
@@ -684,6 +684,7 @@ a.zoomable:hover span.zoom_icon {
 		-webkit-border-radius: 3px;
 		-moz-border-radius: 3px;
 		border-radius: 3px;
+		color: none;
 	}
  	a {
 		background-image: url('../images/unselected.png') no-repeat center center;
