--- a/sass/style.scss
+++ b/sass/style.scss
@@ -679,7 +679,6 @@ a.zoomable:hover span.zoom_icon {
 
 .lt-ie9 .cbp-fbscroller > nav {
 	a {
-		background: #fff;
 		border: 1px solid red;
 		-webkit-border-radius: 3px;
 		-moz-border-radius: 3px;
@@ -687,10 +686,12 @@ a.zoomable:hover span.zoom_icon {
 		color: transparent;
 	}
  	a {
+ 		background: rgba(255,255,255, 0.4);
 		background-image: url('../images/unselected.png') no-repeat center center;
 	}
   a.cbp-fbcurrent,
   a:hover {
+  	background: rgba(255,255,255, 1.0);
 		background-image: url('../images/selected.png') no-repeat center center;
 	}
 	a#nav1 span {
