--- a/sass/style.scss
+++ b/sass/style.scss
@@ -683,15 +683,15 @@ a.zoomable:hover span.zoom_icon {
 		-webkit-border-radius: 3px;
 		-moz-border-radius: 3px;
 		border-radius: 3px;
-		color: transparent;
+		color: #A2A6A9;
 	}
  	a {
- 		background: rgba(255,255,255, 0.4);
+ 		background: #fdd;
 		background-image: url('../images/unselected.png') no-repeat center center;
 	}
   a.cbp-fbcurrent,
   a:hover {
-  	background: rgba(255,255,255, 1.0);
+  	background: #fff;
 		background-image: url('../images/selected.png') no-repeat center center;
 	}
 	a#nav1 span {
